--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "async-validator": "^4.0.7",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
