--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "js-cookie": "^3.0.1",
+    "less-loader": "^5.0.0",
     "pinyin-match": "^1.2.2",
     "qrcode": "^1.5.0",
     "vue": "^2.6.11",
