--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.15.6",
     "js-cookie": "^3.0.1",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.21",
     "pinyin-match": "^1.2.2",
     "qrcode": "^1.5.0",
     "vue": "^2.6.11",
