--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.1",
     "less-loader": "^5.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.2",
     "pinyin-match": "^1.2.2",
     "qrcode": "^1.5.0",
     "qs": "^6.10.3",
